# cis194

./: .gitignore  LICENSE  README.md  cis194.cabal  stack.yaml
src/Cis194/Hw/: AParser.hs  Buffer.hs  Calc.hs  Editor.hs  Employee.hs  ExprT.hs  Fibonacci.hs  Golf.hs  JoinList.hs  JoinListBufEditor.hs  Log.hs  LogAnalysis.hs  Parser.hs  Party.hs  Risk.hs  SExpr.hs  Scrabble.hs  Sized.hs  StackVM.hs  StringBufEditor.hs  StringBuffer.hs  Week1.hs  Week11_lecture.hs  Week4.hs  Week6.hs
src/Cis194/Hw/Bank/: .gitignore  Hw05.hs  Hw05Spec.hs  new-ids.json  transactions.json  victims.json  victims.json.enc
src/Cis194/Hw/Week1/: Internal.hs
test/Cis194/: PartySpec.hs
test/Cis194/Hw/: AParserSpec.hs  AcceptHanoi.hs  CalcSpec.hs  FibonacciSpec.hs  GolfSpec.hs  JoinListSpec.hs  LogAnalysisSpec.hs  PartySpec.hs  PartySpec.hs~HEAD  RiskSpec.hs  SExprSpec.hs  Week1Spec.hs  Week4Spec.hs
